[package]
name = "timermcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.16.0", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
axum = { version = "0.8", features = ["macros"] }
chrono = "0.4"
chrono-tz = "0.10"
tokio-util = { version = "0.7" }
dotenvy = "0.15"
